#561 - Show loader while saving the image position, show image at center if no position saved earlier.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -85,6 +85,19 @@
 			line-height: 1.6;
 			padding: 6px 10px;
 
+			&.loading:after {
+				content: "\e838";
+				font-family: "bb-icons";/* stylelint-disable-line */
+				font-size: 18px;
+				line-height: 1;
+				margin-left: 10px;
+				text-align: center;
+				display: inline-block;
+				-webkit-animation: spin 3s infinite linear;
+				animation: spin 3s infinite linear;
+				vertical-align: middle;
+			}
+
 			&:hover,
 			&:focus {
 				background-color: rgba(255, 255, 255, 0.9);
