Added edit acitivity feed, added time option to activity feed edit

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -321,6 +321,10 @@
 				color: #0061ac;
 			}
 
+			.edit-activity:before {
+				content: "\e80c";
+			}
+
 			.delete-activity:before {
 				content: "\eaea";
 			}
