--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -322,7 +322,7 @@ body.register .buddypress-wrap .page ul {
 			display: block;
 		}
 
-		#header-cover-image {
+		#header-cover-image.has-cover-image {
 			background-image: none;
 		}
 	}
