Added activity modal

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
@@ -118,8 +118,9 @@ form.ac-form {
 	transform: translate(-50%, -50%);
 	background-color: #fff;
 	padding: 10px 15px;
-	width: 300px;
+	width: 700px;
 	border-radius: 5px;
+	max-width: 90%;
 }
 
 .edit-activity-modal-close-button {
