--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3531,8 +3531,9 @@ form.ac-form .ac-reply-content input {
   transform: translate(50%, -50%);
   background-color: #fff;
   padding: 10px 15px;
-  width: 300px;
+  width: 700px;
   border-radius: 5px;
+  max-width: 90%;
 }
 
 .edit-activity-modal-close-button {
