--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -451,3 +451,15 @@ ul.bbp-stats {
 		font-size: 30px;
 	}
 }
+
+
+//Customizer Profile Navigation
+#customize-control-user_nav_order .item-title .checkbox-wrap {
+	display: flex;
+	align-items: center;
+	float: right;
+
+	.visible-checkboxes {
+		margin: 0 5px 0 0;
+	}
+}
