--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -6648,6 +6648,16 @@ ul.bbp-stats .bbp-count {
   font-size: 30px;
 }
 
+#customize-control-user_nav_order .item-title .checkbox-wrap {
+  display: flex;
+  align-items: center;
+  float: right;
+}
+
+#customize-control-user_nav_order .item-title .checkbox-wrap .visible-checkboxes {
+  margin: 0 5px 0 0;
+}
+
 /**
 *----------------------------------------------------------
 * @section 6.1 - Directory Search
