Styled hide checkbox

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -454,6 +454,7 @@ ul.bbp-stats {
 
 
 //Customizer Profile Navigation
+#customize-control-group_nav_order .item-title .checkbox-wrap,
 #customize-control-user_nav_order .item-title .checkbox-wrap {
 	display: flex;
 	align-items: center;
