Hide/shop based on the order tab

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -460,6 +460,10 @@ ul.bbp-stats {
 	align-items: center;
 	float: right;
 
+	&.bp-hide {
+		display: none;
+	}
+
 	.visible-checkboxes {
 		margin: 0 5px 0 0;
 	}
