--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -6655,6 +6655,11 @@ ul.bbp-stats .bbp-count {
   float: right;
 }
 
+#customize-control-group_nav_order .item-title .checkbox-wrap.bp-hide,
+#customize-control-user_nav_order .item-title .checkbox-wrap.bp-hide {
+  display: none;
+}
+
 #customize-control-group_nav_order .item-title .checkbox-wrap .visible-checkboxes,
 #customize-control-user_nav_order .item-title .checkbox-wrap .visible-checkboxes {
   margin: 0 5px 0 0;
