--- a/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_comment_form.scss
@@ -104,11 +104,17 @@ form.ac-form {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(250, 251, 253, 0.9);
 	opacity: 0;
 	visibility: hidden;
 	transform: scale(1.1);
 	transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+	z-index: 999901;
+
+	.activity-update-form #whats-new-form.activity-form {
+		margin-bottom: 0;
+		border: 0;
+	}
 
 	.edit-activity-modal-content {
 		position: absolute;
@@ -116,26 +122,42 @@ form.ac-form {
 		left: 50%;
 		transform: translate(-50%, -50%);
 		background-color: #fff;
-		padding: 10px 15px;
+		padding: 0;
 		width: 700px;
-		border-radius: 5px;
 		max-width: 90%;
+		border-radius: 4px;
+		border: 1px solid #d2d4d6;
+		box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.1);
+
+		#whats-new-submit input {
+			padding: 0 15px;
+			margin: 0 5px;
+			line-height: 27px;
+			height: 34px;
+		}
+
+		#whats-new-toolbar .post-elements-buttons-item a {
+			text-decoration: none;
+			font-size: 16px;
+			line-height: 1.7;
+		}
 	}
 
 	.edit-activity-modal-close-button {
 		float: right;
-		width: 15px;
+		width: auto;
 		line-height: 15px;
 		text-align: center;
 		cursor: pointer;
 		border-radius: 3px;
-		background-color: #d3d3d3;
 		position: relative;
 		z-index: 1;
-	}
+		padding: 10px;
 
-	.edit-activity-modal-close-button:hover {
-		background-color: #a9a9a9;
+		.bb-icon {
+			font-size: 22px;
+			color: #939597;
+		}
 	}
 
 	&.show-modal {
@@ -150,4 +172,8 @@ form.ac-form {
 
 	}
 
+}
+
+.activity-list .activity-item .bp-generic-meta.action .button.edit-activity span.edit-label {
+	vertical-align: middle;
 }
