#1221 media theatre range elementor activity

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -835,7 +835,8 @@ span.dashicons.dashicons-admin-file:before {
 }
 
 #bbpress-forums .bb-media-model-container,
-#buddypress .bb-media-model-wrapper.media-theatre {
+#buddypress .bb-media-model-wrapper.media-theatre,
+#buddypress.bb-media-model-wrapper.media-theatre {
 
 	.activity-list.bp-list {
 		position: relative;
