#962 - Photos selection changed to bottom

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -523,7 +523,7 @@
 .bb-media-check-wrap {
 	position: absolute;
 	transition: 0.3s all;
-	top: 15px;
+	bottom: 15px;
 	right: 15px;
 	color: #fff;
 	width: 20px;
