--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -3531,6 +3531,10 @@ body.document  #bp-media-single-folder  .album-single-view .bp-media-header-wrap
 				margin: 0;
 				padding: 0;
 
+				&:first-child {
+					margin-top: 0;
+				}
+
 				&.is-disabled {
 					cursor: auto;
 					opacity: 0.5;
