--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -15371,6 +15371,21 @@ body.document #bp-media-single-folder .album-single-view .bp-media-header-wrap .
   padding: 0;
 }
 
+.location-album-list-wrap-main .ac_document_search_folder_list .location-album-list li:first-child,
+.location-album-list-wrap-main .ac_document_search_folder_list .location-folder-list li:first-child,
+.location-album-list-wrap-main .location-folder-list-wrap .location-album-list li:first-child,
+.location-album-list-wrap-main .location-folder-list-wrap .location-folder-list li:first-child,
+.location-album-list-wrap-main .location-album-list-wrap .location-album-list li:first-child,
+.location-album-list-wrap-main .location-album-list-wrap .location-folder-list li:first-child,
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-album-list li:first-child,
+.location-folder-list-wrap-main .ac_document_search_folder_list .location-folder-list li:first-child,
+.location-folder-list-wrap-main .location-folder-list-wrap .location-album-list li:first-child,
+.location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li:first-child,
+.location-folder-list-wrap-main .location-album-list-wrap .location-album-list li:first-child,
+.location-folder-list-wrap-main .location-album-list-wrap .location-folder-list li:first-child {
+  margin-top: 0;
+}
+
 .location-album-list-wrap-main .ac_document_search_folder_list .location-album-list li.is-disabled,
 .location-album-list-wrap-main .ac_document_search_folder_list .location-folder-list li.is-disabled,
 .location-album-list-wrap-main .location-folder-list-wrap .location-album-list li.is-disabled,
